# BoxScratch

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile
include/boxScratch/: blocks.h  project.h  scratchEnum.h  sprite.h  stack.h  values.h
include/boxScratch/blocks/: motion.h
src/: blocks.cpp  main.cpp
